--- a/ProyectoFinal G03.csproj
+++ b/ProyectoFinal G03.csproj
@@ -274,6 +274,7 @@
     <Content Include="Pages\Reservaciones\EditarReservacion.aspx" />
     <Content Include="Pages\Reservaciones\GestiornarReservaciones.aspx" />
     <Content Include="Pages\Reservaciones\MisReservaciones.aspx" />
+    <Content Include="Pages\Styles.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
