--- a/Web.config
+++ b/Web.config
@@ -83,9 +83,8 @@
     </compilers>
   </system.codedom>
 
-  <connectionStrings>
-    <add name="MyDatabase" providerName="System.Data.SqlClient"
-    connectionString="Data Source=LAPTOP-57J4RFLP\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
-  </connectionStrings>
-  
+	<connectionStrings>
+		<add name="MyDatabase" providerName="System.Data.SqlClient"
+			 connectionString="Data Source=LAPTOP-TKFN345G\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+	</connectionStrings>
 </configuration>
