--- a/Web.config
+++ b/Web.config
@@ -85,6 +85,7 @@
 
 	<connectionStrings>
 		<add name="MyDatabase" providerName="System.Data.SqlClient"
-			 connectionString="Data Source=LAPTOP-57J4RFLP\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
+			 connectionString="Data Source=LAPTOP-TKFN345G\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True;TrustServerCertificate=True" />
 	</connectionStrings>
+
 </configuration>
